# auto-job-applier

./: .env.example  .gitignore  README.md  pyproject.toml  run-job-agent.sh
examples/: policy.example.yaml  policy.openclaw.yaml  portals.example.yaml  profile.example.yaml  profile.openclaw.yaml
examples/prompts/: remote-ai.txt
scripts/: prepare_openclaw_profile.sh  start_live_run.sh  start_web_dashboard.sh
src/job_agent/: cli.py  config.py  models.py  notifications.py  prompts.py  ranker.py  storage.py  tracker.py  workflow.py
src/job_agent/apply/: __init__.py  browser.py
src/job_agent/sources/: __init__.py  base.py  career_ops_portals.py  greenhouse.py  lever.py  remoteok.py  web_search.py
templates/: states.yml
web/: package-lock.json  package.json
web/app/: globals.css  layout.tsx  page.tsx
web/app/api/run/: route.ts
web/app/api/status/: route.ts
web/components/: dashboard.tsx
web/lib/: paths.ts  status.ts
